crates/ruff_python_parser/tests/snapshots/invalid_syntax@comma_separated_missing_comma.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/comma_separated_missing_comma.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..15,
        body: Suite {
            range: 0..15,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 0..14,
                        value: Call(
                            ExprCall {
                                node_index: NodeIndex(None),
                                range: 0..14,
                                func: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 0..4,
                                        id: Name("call"),
                                        ctx: Load,
                                    },
                                ),
                                arguments: Arguments {
                                    range: 4..14,
                                    node_index: NodeIndex(None),
                                    args: [
                                        NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 12..13,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    ],
                                    keywords: [
                                        Keyword {
                                            range: 5..8,
                                            node_index: NodeIndex(None),
                                            arg: None,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 7..8,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                        },
                                    ],
                                },
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | call(**x := 1)
  |          ^^ Syntax Error: Expected `,`, found `:=`
  |


  |
1 | call(**x := 1)
  |             ^ Syntax Error: Positional argument cannot follow keyword argument unpacking
  |
