crates/ruff_python_parser/tests/snapshots/invalid_syntax@comma_separated_missing_element_between_commas.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/comma_separated_missing_element_between_commas.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..12,
        body: Suite {
            range: 0..12,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 0..11,
                        value: List(
                            ExprList {
                                node_index: NodeIndex(None),
                                range: 0..11,
                                elts: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 1..2,
                                            value: Int(
                                                0,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 4..5,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 9..10,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | [0, 1, , 2]
  |        ^ Syntax Error: Expected an expression or a ']'
  |
