crates/ruff_python_parser/tests/snapshots/invalid_syntax@comprehension_missing_for_after_async.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/comprehension_missing_for_after_async.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..28,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..7,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 1..6,
                            id: Name("async"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 8..27,
                    value: Generator(
                        ExprGenerator {
                            node_index: NodeIndex(None),
                            range: 8..27,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 9..10,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 11..26,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 17..18,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 22..26,
                                            id: Name("iter"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: true,
                                },
                            ],
                            parenthesized: true,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | (async)
  |  ^^^^^ Syntax Error: Expected an identifier, but found a keyword `async` that cannot be used here
2 | (x async x in iter)
  |


  |
1 | (async)
2 | (x async x in iter)
  |          ^ Syntax Error: Expected `for`, found identifier
